# Gimp-PixelToolkit

./: README.md
Plugins/: xbrz_pixel_scaler.py
xbrz_wrapper/: CMakeLists.txt  Scale.cpp  Scale.h  xbrz.cpp  xbrz_tools.h
